# statistics-python-for-students

./: .gitignore  README.md  pyproject.toml  requirements.txt  学習者ガイド.md
01_Python基礎/: 01_Pythonをはじめよう.ipynb  02_変数・数・文字列.ipynb  03_リスト・辞書・くり返し.ipynb  04_条件分岐・関数・ライブラリ.ipynb  05_NumPy入門.ipynb  06_pandas入門.ipynb  07_matplotlib入門.ipynb  08_スプレッドシートからPythonへ.ipynb
02_統計_4級/: 01_データの種類と度数分布.ipynb  02_代表値.ipynb  03_ばらつきと箱ひげ図.ipynb  04_確率とクロス集計.ipynb  05_PPDACとグラフの読み方.ipynb  06_時系列と場合の数.ipynb
03_統計_3級/: 01_分散・標準偏差・標準化.ipynb  02_相関と回帰.ipynb  03_確率分布.ipynb  04_母集団と標本.ipynb  05_実験と条件付き確率.ipynb  06_共分散・変動係数・正規近似.ipynb  07_実践_タイタニック分析.ipynb
04_統計_2級/: 01_区間推定.ipynb  02_仮説検定.ipynb  03_カイ二乗と分散分析.ipynb  04_母分散・F検定・母比率の差.ipynb  05_いろいろな確率分布とベイズ.ipynb  06_重回帰分析.ipynb  07_抽出法・実験計画・格差指標.ipynb  08_実践_タイタニック分析.ipynb
05_実践_BtoBマーケ/: 01_売上データ分析.ipynb  02_ファネルとチャネル効率.ipynb  03_ABテストとKPI.ipynb  04_顧客スコアリング.ipynb  04_顧客スコアリングと標準化.ipynb  05_広告クリックの予測.ipynb  05_表示回数とクリック数の関係_単回帰.ipynb  06_受注率の区間推定と検定.ipynb  06_受注率の評価.ipynb
06_ホビー_陶芸3D/: 01_FreeCADで器をつくる.ipynb  02_Blenderで器をつくる.ipynb  03_SolidPythonで器をつくる.ipynb
06_発展_マーケ分析/: 01_ドライバー分析_回帰.ipynb  01_顧客指標の相関分析.ipynb  02_売上トレンドの分析.ipynb  02_時系列予測.ipynb  03_顧客セグメンテーション_RFM.ipynb  03_顧客構成の検定.ipynb  04_チャネル別クリック率の比較.ipynb  04_因果推論_傾向スコアとIPW.ipynb  05_チャネル別獲得率の比較.ipynb  05_生存時間解析_チャーン分析.ipynb  06_ベイズ統計_事後分布と信用区間.ipynb  06_売上ドライバーの分析.ipynb
07_ホビー_陶芸3D/: 00_はじめに_3Dツールの選び方.ipynb  01_FreeCADで器をつくる.ipynb  02_Blenderで器をつくる.ipynb  03_SolidPythonで器をつくる.ipynb  04_実用ツールをつくる.ipynb
07_発展_マーケ分析/: 01_ドライバー分析_回帰.ipynb  02_時系列予測.ipynb  (+1 more)
data/: ab_test.csv  (+9 more)
(+103 files in other folders)
